# python-study-group

./: README.md  old.nix
week-1/: README.md  shell.nix
week-1/hello-world/: pyproject.toml
week-1/hello-world/src/hello_world/: __main__.py  greet.py
week-1/hello-world/tests/: test_greet.py
